Rasa internal Connectivity

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     selector: "#webchat",
     initPayload: "/greet",
     customData: {"language": "en"},
-    socketUrl: "http://localhost:5005",
+    socketUrl: "__RASA_API_URL__",
     socketPath: "/socket.io/",
     inputTextFieldHint: "Hi",
     title: "Chatbot",
